# lab-solutions

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: cargo-checks.yml
lab02/bare_metal/: Cargo.toml  build.rs
lab02/bare_metal/src/: main.rs
lab02/embassy/: Cargo.toml
lab02/embassy/src/: main.rs
lab02/input/: Cargo.toml
lab02/input/src/: main.rs
lab02/pac/: Cargo.toml
lab02/pac/src/: main.rs
lab03/ex5/: Cargo.toml
lab03/ex5/src/: main.rs
lab03/hal/: Cargo.toml  build.rs
lab03/hal/src/: main.rs
lab04/lab04_ex2/: Cargo.toml
lab04/lab04_ex2/src/: main.rs
lab04/lab04_ex3/: Cargo.toml
lab04/lab04_ex3/src/: main.rs
lab04/lab04_ex4/: Cargo.toml
lab04/lab04_ex4/src/: main.rs
lab04/lab04_ex5/: Cargo.toml
lab04/lab04_ex5/src/: main.rs
lab04/lab04_ex6/: Cargo.toml  build.rs
lab04/lab04_ex6/src/: main.rs
lab05/lab05_ex2/: Cargo.toml
lab05/lab05_ex2/src/: main.rs
lab05/lab05_ex3_4_5/: Cargo.toml
lab05/lab05_ex3_4_5/src/: main.rs
lab06/lab06_ex2/: Cargo.toml
lab06/lab06_ex2/src/: main.rs
lab06/lab06_ex3_4/: Cargo.toml
lab06/lab06_ex3_4/src/: main.rs
lab06/lab06_ex5/: Cargo.toml
lab06/lab06_ex5/src/: main.rs
lab07/lab07_all/: Cargo.toml
lab07/lab07_all/src/: main.rs
lab08/lab08_ex1_2/: Cargo.toml
lab08/lab08_ex1_2/src/: main.rs
lab08/lab08_ex3_4/: Cargo.toml
lab08/lab08_ex3_4/src/: main.rs
lab08/lab08_ex5/: Cargo.toml
lab08/lab08_ex5/src/: main.rs
