[package]
name = "pac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rp2040-boot2 = "0.3"
cortex-m-rt = { version = "0.7.3" }
rp2040-pac = { version = "0.6.0", features = ["critical-section"] }
embedded-hal = "1.0.0"
critical-section = "1.1.2"
